--- a/less/slick-theme.less
+++ b/less/slick-theme.less
@@ -3,14 +3,20 @@
 .slick-dots {
 	bottom: 0;
 }
+
 .slick-dots li.slick-active button:before {
 	color: #fff;
-	font-size: 30px;
+	font-size: 12px;
 	opacity: 1;
 }
+
 .slick-dots li button:before {
-	font-size: 15px;
+	font-size: 7px;
 	color: #fff;
 	text-shadow: 1px 1px 3px #000;
-	opacity: 1;
+	opacity: 0.8;
 }
+
+@slick-loader-path: "../bower_components/slick-carousel/slick/";
+@slick-font-path: "../bower_components/slick-carousel/slick/fonts/";
+
